--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Rango says...</h1>
         <div>hey there partner!</div>
-
+        <h3>Most Liked Categories</h3>
         <div>
             {% if categories %}
             <ul>
@@ -19,6 +19,16 @@
             {% else %}
                 <strong>There are no categories present.</strong>
             {% endif %}
+        </div>
+        <h3>Most Viewed Pages</h3>
+        <div>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
+        {% endif %}
         </div>
 
         <div>
