--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -13,7 +13,9 @@
             {% if categories %}
             <ul>
                 {% for category in categories %}
-                <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+                <li>
+                    <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+                </li>
                 {% endfor %}
             </ul>
             {% else %}
@@ -33,7 +35,7 @@
 
         <div>
             <a href="/rango/add_category/">Add a New Category</a><br/>
-            <a href="/rango/about/">About</a><br/>
+            <a href="{% url 'rango.views.about' %}">About</a>
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
         </div>
     </body>
