--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
 
-    <head>
-        <title>About</title>
-    </head>
-
-    <body>
+{% block body_block %}
         <h1>Rango says...</h1>
         <div>
             here is the about page. <br />
             <strong>{{ boldmessage }}</strong><br/>
         </div>
         <div>
-            <a href="/rango/">Index</a><br/>
             <img src="{{ MEDIA_URL}}cat.jpg"/>
         </div>
-    </body>
-
-</html>
+{% endblock %}
