--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
     <h1>Add a Page</h1>
     <div>
         <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
@@ -20,5 +21,4 @@
             <input type="submit" name="submit" value="Create Page" />
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
