--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,8 +6,13 @@
 {% endblock %}
 
 {% block body_block %}
-        <h1>Rango says...</h1>
-        <div>hey there partner!</div>
+        <h1>Rango says...
+        {% if user.is_authenticated %}
+            howdy {{ user.username }}!
+        {% else %}
+            hey there partner!
+        {% endif %}
+        </h1>
         <h3>Most Liked Categories</h3>
         <div>
             {% if categories %}
@@ -35,4 +40,7 @@
         <div>
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
         </div>
+        <ul>
+
+        </ul>
  {% endblock %}
