--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -8,17 +8,22 @@
 {% block body_block %}
     <h1>Add a Page</h1>
     <div>
-        <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Create Page" />
-        </form>
+        {% if user.is_authenticated %}
+            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
+                {% for field in form.visible_fields %}
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    {{ field }}
+                {% endfor %}
+                <input type="submit" name="submit" value="Create Page" />
+            </form>
+        {% else %}
+            <li><a href="{% url 'login' %}">Sign In</a></li>
+            <li><a href=""{% url 'register' %}">Sign Up</a></li>
+        {% endif %}
     </div>
 {% endblock %}
