styling with bootstrap

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% extends 'rango/base_bootstrap.html' %}
+
+<!--<!DOCTYPE html>
 {% load rango_template_tags %}
 {% load staticfiles %}
 
@@ -39,4 +41,4 @@
         </ul>
     </div>
 </body>
-</html>
+</html> -->
