--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -2,45 +2,48 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    {{ category.name }}
+    Index
 {% endblock %}
 
 {% block body_block %}
-        <h1>Rango says...
-        {% if user.is_authenticated %}
-            howdy {{ user.username }}!
+<div class="jumbotron">
+    <h1 class="display-3">Rango says...</h1>
+    {% if user.is_authenticated %}
+        <h1>hey there {{ user.username }}!</h1>
+    {% else %}
+        <h1>hey there partner!</h1>
+    {% endif %}
+</div>
+<div class="row marketing">
+        <div class="col-lg-6">
+        <h4>Most Liked Categories</h4>
+        <p>
+        {% if categories %}
+        <ul>
+            {% for category in categories %}
+            <li><a href="{% url 'show_category' category.slug %}">
+                {{ category.name }}</a></li>
+            {% endfor %}
+        </ul>
         {% else %}
-            hey there partner!
+            <strong>There are no categories present.</strong>
         {% endif %}
-        </h1>
-        <h3>Most Liked Categories</h3>
-        <div>
-            {% if categories %}
+        </p>
+        </div>
+        <div class="col-lg-6">
+            <h4>Most Viewed Pages</h4>
+            <p>
+            {% if pages %}
             <ul>
-                {% for category in categories %}
-                <li>
-                    <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
-                </li>
+                {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
                 {% endfor %}
-            </ul>
+                </ul>
             {% else %}
                 <strong>There are no categories present.</strong>
             {% endif %}
+            </p>
         </div>
-        <h3>Most Viewed Pages</h3>
-        <div>
-        {% if pages %}
-            <ul>
-            {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-        </div>
-        <div>
-            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-        </div>
-        <ul>
-
-        </ul>
+</div>
+<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
  {% endblock %}
