--- a/templates/rango/base_bootstrap.html
+++ b/templates/rango/base_bootstrap.html
@@ -46,12 +46,12 @@
     </nav>
     <div class="container-fluid">
       <div class="row">
-      <!-- <div class="col-sm-3 col-md-2 sidebar">
+      <div class="col-sm-3 col-md-2 sidebar">
         {% block sidebar_block %}
           {% get_category_list category %}
         {% endblock %}
-      </div> -->
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      </div>
+      <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
       {% block body_block %}{% endblock %}
       </div>
       </div>
