changed pics and added page clicktrhoughs tracking

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
         <h1>Rango says...</h1>
         <div>
             here is the about page. <br />
-            <strong>You've visited this site on {{ visits }} occasation(s)</strong><br/>
+            <strong>You've visited this site on {{ visits }} occasion(s)</strong><br/>
             <strong>{{ boldmessage }}</strong><br/>
         </div>
         <div>
