--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,4 +15,11 @@
         <div>
             <img src="{{ MEDIA_URL}}cat.jpg"/>
         </div>
+<button class="btn btn-primary" onClick="alert('You clicked the button using JavaScript.');"> Click Me - I run JavaScript
+</button>
+<br/>
+<button class="btn btn-primary" id="about-btn"> Click Me - I'm JavaScript on Speed</button>
+<p>This is a example</p> <p>This is another example</p>
+<p>This text is for a JQuery Example</p>
+<div id="msg">Hello - I'm here for a JQuery Example too</div>
 {% endblock %}
