--- a/templates/rango/base_bootstrap.html
+++ b/templates/rango/base_bootstrap.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-<script src="{% static "js/rango-jquery.js" %}"></script>
 {% load rango_template_tags %}
 <html lang="en">
   <head>
@@ -51,10 +49,17 @@
     <div class="container-fluid">
       <div class="row">
       <div class="col-sm-3 col-md-2 sidebar">
-        {% block sidebar_block %}
-          {% get_category_list category %}
-        {% endblock %}
-      </div>
+        <ul class="nav nav-list">
+            <li class="nav-header">Type to find a category</li>
+            <form>
+            <li><input class="search-query form-control" type="text"
+                name="suggestion" value="" id="suggestion" />
+            </li>
+            </form>
+        </ul>
+        <hr>
+        <div id="cats"> </div>
+        </div>
       <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
       {% block body_block %}{% endblock %}
       </div>
@@ -69,5 +74,8 @@
     <script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="{% static "js/rango-jquery.js" %}"></script>
+    <script src="{% static "js/rango-ajax.js" %}"></script>
   </body>
 </html>
